update the meta analysis table

--- a/meta_analysis.ipynb
+++ b/meta_analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,6 +307,8 @@
     "    \n",
     "    # Replace 'X' with NaN\n",
     "    df = df.replace('X', np.nan)\n",
+    "\n",
+    "    df = df.sort_values(by='vaccine')\n",
     "    \n",
     "    if ave == 'Severe+':\n",
     "        df = df[df['ave'].isin(['Severe', 'Critical', 'Death', 'ED', 'ICU'])]\n",
@@ -324,7 +326,9 @@
     "    study_strings = []\n",
     "    for _, row in df.iterrows():\n",
     "        if pd.notna(row['no_of_infected_in_vaccine_group']) and pd.notna(row['no_of_infected_in_placebo_group']):\n",
-    "            study_string = f\"{row['reference']}, {int(row['no_of_infected_in_vaccine_group'])}, {int(row['no_of_participants_in_vaccine_group'])}, {int(row['no_of_infected_in_placebo_group'])}, {int(row['no_of_participants_in_placebo_groupcontrol_group'])}\"\n",
+    "            # Combine vaccine and reference into one identifier\n",
+    "            study_id = f\"{row['vaccine'] } ({row['reference']})\"\n",
+    "            study_string = f\"{study_id}, {int(row['no_of_infected_in_vaccine_group'])}, {int(row['no_of_participants_in_vaccine_group'])}, {int(row['no_of_infected_in_placebo_group'])}, {int(row['no_of_participants_in_placebo_groupcontrol_group'])}\"\n",
     "            study_strings.append(study_string)\n",
     "    \n",
     "    return study_strings"
@@ -332,7 +336,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def prepare_data_for_pythonmeta(excel_file, ave, variant='SARS-CoV-2'):\n",
+    "#     # Read the Excel file\n",
+    "#     df = pd.read_excel(excel_file)\n",
+    "    \n",
+    "#     # Replace 'X' with NaN\n",
+    "#     df = df.replace('X', np.nan)\n",
+    "    \n",
+    "#     if ave == 'Severe+':\n",
+    "#         df = df[df['ave'].isin(['Severe', 'Critical', 'Death', 'ED', 'ICU'])]\n",
+    "#     else:\n",
+    "#         df = df[df['ave']==ave]\n",
+    "#     df = df[df['variant']==variant]\n",
+    "\n",
+    "#     # Convert numeric columns to appropriate type\n",
+    "#     numeric_cols = ['no_of_participants_in_vaccine_group', 'no_of_infected_in_vaccine_group',\n",
+    "#                    'no_of_participants_in_placebo_groupcontrol_group', 'no_of_infected_in_placebo_group']\n",
+    "#     for col in numeric_cols:\n",
+    "#         df[col] = pd.to_numeric(df[col], errors='coerce')\n",
+    "\n",
+    "#     # Create formatted strings for PythonMeta\n",
+    "#     study_strings = []\n",
+    "#     for _, row in df.iterrows():\n",
+    "#         if pd.notna(row['no_of_infected_in_vaccine_group']) and pd.notna(row['no_of_infected_in_placebo_group']):\n",
+    "#             study_string = f\"{row['reference']}, {int(row['no_of_infected_in_vaccine_group'])}, {int(row['no_of_participants_in_vaccine_group'])}, {int(row['no_of_infected_in_placebo_group'])}, {int(row['no_of_participants_in_placebo_groupcontrol_group'])}\"\n",
+    "#             study_strings.append(study_string)\n",
+    "    \n",
+    "#     return study_strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,6 +731,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "study_data = prepare_data_for_pythonmeta('rw_vaccine_details.xlsx', ave=ave)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "study_data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -703,7 +760,7 @@
     "study_data = prepare_data_for_pythonmeta('rw_vaccine_details.xlsx', ave=ave)\n",
     "\n",
     "# Remove Frenck2021_safety_immunogenicity_and_efficacy_of_the_BNT162b2, index:6\n",
-    "study_data.pop(6)\n",
+    "study_data.pop(12)\n",
     "\n",
     "\n",
     "# Set up the analysis settings\n",
@@ -732,7 +789,7 @@
     "study_data = prepare_data_for_pythonmeta('rw_vaccine_details.xlsx', ave=ave)\n",
     "\n",
     "# Remove Frenk2021_safety_immunogenicity_and_efficacy_of_the_BNT162b2, index:6\n",
-    "study_data.pop(6)\n",
+    "study_data.pop(12)\n",
     "\n",
     "\n",
     "\n",
