--- a/vaccine_details_plot.ipynb
+++ b/vaccine_details_plot.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_vaccine_efficacy_ave_platform(vaccine_detail, save_fig=True)"
+    "plot_vaccine_efficacy_ave_platform(vaccine_detail, save_fig=False)"
    ]
   },
   {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
