--- a/ve_recalculate.ipynb
+++ b/ve_recalculate.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zero_adjust = True # Add 0.5 to zero values base on Pagano & Gauvreau, 2000; Deeks & Higgins, 2010\n",
+    "zero_adjust = False # Add 0.5 to zero values base on Pagano & Gauvreau, 2000; Deeks & Higgins, 2010\n",
     "\n",
     "# Calculate vaccine efficacy and confidence interval\n",
     "RW_vaccine_efficacy = np.ones(len(vaccine_detail))*np.nan\n",
@@ -129,7 +129,7 @@
     "vaccine_detail['RW_lower'] = RW_lower*100\n",
     "vaccine_detail['RW_upper'] = RW_higher*100\n",
     "\n",
-    "# vaccine_detail.to_excel('rw_vaccine_details.xlsx')\n"
+    "vaccine_detail.to_excel('rw_vaccine_details.xlsx')\n"
    ]
   },
   {
@@ -237,7 +237,10 @@
     "\n",
     "paper_ve_methods = paper_ve_methods[~nan_map]\n",
     "paper_ci_methods = paper_ci_methods[~nan_map]\n",
-    "references = references[~nan_map]"
+    "references = references[~nan_map]\n",
+    "\n",
+    "ave = vaccine_detail['ave'].to_numpy()\n",
+    "ave = ave[~nan_map]"
    ]
   },
   {
@@ -293,6 +296,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "lower_bound_df = pd.DataFrame({'RW_lb': RW_lower_bound, 'paper_lb': paper_lower_bound, 'ref': references, 'ave': ave})\n",
+    "print(lower_bound_df[(lower_bound_df['RW_lb'] <= 50) & (lower_bound_df['paper_lb'] >= 50) & (lower_bound_df['RW_lb'] != 0)])\n",
+    "# print(lower_bound_df[(lower_bound_df['RW_lb'] <= 50) & (lower_bound_df['RW_lb'] != 0)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig1 = different_between_efficacy(paper_vaccine_efficacy, paper_ve_methods, RW_vaccine_efficacy, save_fig=False)"
    ]
   },
@@ -308,7 +322,7 @@
     "distance_between_CI(paper_vaccine_efficacy[map_list], paper_lower_bound[map_list],\n",
     "                    paper_upper_bound[map_list], paper_ve_methods[map_list], paper_ci_methods[map_list],\n",
     "                    RW_vaccine_efficacy[map_list], RW_lower_bound[map_list], RW_upper_bound[map_list],\n",
-    "                    save_fig=True)"
+    "                    save_fig=False)"
    ]
   },
   {
@@ -352,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.16"
   },
   "vscode": {
    "interpreter": {
